<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DondeActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_donde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/string_donde_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_nombre"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/string_contact"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editText_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="12dp"
            android:text="email" />

        <TextView
            android:id="@+id/textView_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/string_entrega"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="12dp"
            android:text="Nombre" />

        <EditText
            android:id="@+id/editText_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="12dp"
            android:text="@string/string_apellido" />

        <EditText
            android:id="@+id/editText_rut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="12dp"
            android:text="Rut"
            app:helperText="Requerido" />

        <EditText
            android:id="@+id/editText_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="12dp"
            android:text="@string/string_direccion" />

        <EditText
            android:id="@+id/editText_comuna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="12dp"
            android:text="@string/string_comuna" />

        <EditText
            android:id="@+id/editText_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="12dp"
            android:text="@string/string_region" />

        <EditText
            android:id="@+id/editText_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:onClick="onSiguienteButtonClick"
            android:text="+56 9 xxx xx xxx" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_atrasDonde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onAtrasButtonClick"
                android:padding="12dp"
                android:text="@string/string_atras" />

            <Button
                android:id="@+id/button_addDatabase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onSiguienteButtonClick"
                android:padding="12dp"
                android:text="@string/string_siguiente" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>