<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PagoActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_formaPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/string_forma_de_pago"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_total_3"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="@string/string_subtotal"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_valorTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="0.0"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_envioCost"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="@string/string_envio"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_envio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="0.0"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_totalFinal"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="@string/total_final"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_totalsuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="0.0"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_ApplePay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onMethodButtonClick"
            android:padding="12dp"
            android:text="@string/string_ApplePay" />

        <Button
            android:id="@+id/button_MercadoPago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onMethodButtonClick"
            android:padding="12dp"
            android:text="@string/string_mercadoPago" />

        <Button
            android:id="@+id/button_OnePay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onMethodButtonClick"
            android:padding="12dp"
            android:text="@string/string_webPay" />

        <Button
            android:id="@+id/button_atrasPago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onBackButtonClick"
            android:padding="12dp"
            android:text="@string/string_atras" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>